# StringConstructor

./: CMakeLists.txt
cmake/: FindGMock.cmake  FindGTest.cmake
src/: CMakeLists.txt  GeneratorRegistry.cpp  GeneratorRegistry.h  IGenerator.h  IGeneratorRegistry.h  StringConstructor.cpp  StringConstructor.h  StringView.cpp  StringView.h  TextGenerator.cpp  TextGenerator.h
tests/: CMakeLists.txt  GeneratorRegistry.cpp  Mocks.h  StringConstructor.cpp  StringView.cpp
